@@ -1,3 +1,3 @@
-EMAIL_HOST_USER=yddjango@gmail.comcom
-EMAIL_HOST_PASSWORD=vuvfwbutuyabkavq
-EMAIL_TO_USER=ykbs100@gmail.com
+EMAIL_HOST_USER = yddjango@gmail.com
+EMAIL_HOST_PASSWORD = vuvfwbutuyabkavq
+EMAIL_TO_USER = ykbs100@gmail.com
