@@ -1,3 +1,1 @@
-django_venv/
-.vscode/
-.env/
+.env
